--- a/Homepage.html
+++ b/Homepage.html
@@ -63,7 +63,7 @@
                             <!-- Full-width images with number and caption text -->
                             <img src="images/WhatsApp Image 2024-12-01 at 6.43.02 PM.jpeg" style="width: 30%; margin-bottom: 16px;">
                             <img src="images/WhatsApp Image 2024-12-01 at 6.45.47 PM.jpeg" style="width: 30%; margin-bottom: 16px;">
-                            <img src="images/WhatsApp Image 2024-12-01 at 6.47.32 PM.jpeg" style="width: 30%; margin-bottom: 16px;">
+                            <img src="images/FRAG.jfif" style="width: 30%; margin-bottom: 16px;">
                         </div>
 
                 </section>
